[package]
name = "huffc-zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rlp = { version = "0.5.2", default-features = false }
serde_json = "1.0.81"
huff_utils = { path = "../huff_utils" }
huff_core = { path = "../huff_core" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.83"
